[package]
name = "basex-rs"
version = "0.2.0"
authors = ["zTgx <beautifularea@gmail.com>"]
edition = "2018"
readme = "README.md"
keywords = [ "base58", "Bitcoin"]
categories = [ "cryptography" ]
license = "MIT/Apache-2.0"
description = "Base58 implementation."
repository = "https://github.com/zTgx/basex-rs.git"

[dependencies]
